# pr-release-board

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: __init__.py  config.py  extensions.py
app/models/: __init__.py  pull_request.py  queue_event.py  queue_item.py  repo.py
app/routes/: _helpers.py  api.py  pages.py
app/services/: github_service.py  queue_service.py
app/static/js/: board.js
app/templates/: activity.html  base.html  board.html
migrations/: env.py
migrations/versions/: a446322e70dd_add_queue_events.py  b1c2d3e4f5a6_add_unique_constraint_repos_owner_name.py  e694c2339775_add_queue_items.py  f0d8c5d69977_add_repos_and_pull_request_cache.py
tests/: __init__.py  conftest.py
tests/routes/: __init__.py  test_api.py  test_helpers.py  test_pages.py
tests/services/: __init__.py  test_github_service.py  test_queue_service.py
