[tool.poetry]
name = "pr-release-board"
version = "0.1.0"
description = "A lightweight visual board for prioritising and coordinating pull request releases"
readme = "README.md"
authors = []
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0"
flask-sqlalchemy = "^3.1"
alembic = "^1.13"
psycopg2-binary = "^2.9"
PyGithub = "^2.4"
apscheduler = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
