[tool.poetry]
name = "pr-release-board"
version = "0.1.0"
description = "A lightweight visual board for prioritising and coordinating pull request releases"
readme = "README.md"
authors = []
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0"
flask-sqlalchemy = "^3.1"
alembic = "^1.13"
psycopg2-binary = "^2.9"
PyGithub = "^2.4"
apscheduler = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
coverage = {extras = ["toml"], version = "^7.0"}
black = "^24.0"
isort = "^5.13"
ruff = "^0.4"
pre-commit = "^3.7"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]

[tool.coverage.run]
source = ["app"]
omit = ["migrations/*", "*/__pycache__/*", "*.pyc", "*.pyo"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
